fix overflow tab menu voting

--- a/src/app/pages/proposal/proposal-detail/validators-votes/validators-votes.component.scss
+++ b/src/app/pages/proposal/proposal-detail/validators-votes/validators-votes.component.scss
@@ -17,6 +17,11 @@
     margin-bottom: 32px;
 }
 
+.mobile-tab {
+    overflow: hidden;
+    overflow-x: auto;
+}
+
 .card__title-mobile {
     font-size: 2rem;
     line-height: 2.3rem;
