--- a/src/app/pages/proposal/proposal-detail/votes/votes.component.scss
+++ b/src/app/pages/proposal/proposal-detail/votes/votes.component.scss
@@ -25,10 +25,8 @@
 }
 
 .mobile-tab {
-    display: flex;
-    width: 100%;
-    flex-wrap: nowrap;
-    overflow: auto;
+    overflow: hidden;
+    overflow-x: auto;
 }
 
 .mobile-tab::-webkit-scrollbar {
